# JSON-Simd

./: .gitignore  .gitmodules  LICENSE  META6.json  README.md  sparrow.yaml
.github/workflows/: github.yaml
cc/: CMakeLists.txt  json-native.cc
cc/lib/: CMakeLists.txt
lib/Json/: Simd.rakumod
t/: 00-use.rakutest
